Aggiorna file di credenziali specificando il parametro username

--- a/src/main/resources/config/FREE_Keystore.properties
+++ b/src/main/resources/config/FREE_Keystore.properties
@@ -5,7 +5,7 @@ org.apache.ws.security.crypto.merlin.keystore.type=pkcs12
 org.apache.ws.security.crypto.merlin.keystore.alias=<ID Postazione>
 
 # Properties internal
-ID_OPERATORE=USERSFREETEST002
+ID_OPERATORE=<Username web (USERSFREETEST)>
 ID_SEDE=<Codice Comune>
 ID_POSTAZIONE=<ID Postazione>
 ID_APPLICAZIONE=12345
