--- a/pom.xml
+++ b/pom.xml
@@ -344,7 +344,7 @@
 <!-- 			</plugin> -->
 			
 			
-			<plugin>
+<!--			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
 				<configuration>
@@ -358,7 +358,7 @@
 			</plugin>			
  
 		</plugins>
-<!-- 		<resources>
+ 		<resources>
 			<resource>
 				<directory>src/main/resources</directory>
 				<excludes>
