Fix configurazione di build
Nel pom manca il tag che chiude <plugins> per via di un commento. Con questa patch il progetto compila nuovamente.

--- a/pom.xml
+++ b/pom.xml
@@ -356,9 +356,9 @@
 					</archive>
 				</configuration>
 			</plugin>			
- 
+--> 
 		</plugins>
- 		<resources>
+ <!--		<resources>
 			<resource>
 				<directory>src/main/resources</directory>
 				<excludes>
